Version 0.31 is production ready